--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="hero-image">
         <img
-          src="https://media.licdn.com/dms/image/v2/D4D03AQGVbCcH7BINgA/profile-displayphoto-shrink_800_800/B4DZTLPn9wHIAg-/0/1738576658684?e=1756944000&v=beta&t=R0Nybsf1x_jCwGyirjsaDzwkC5ezG8PXQCx843usTOs"
+          src="/docs/joo.png"
           alt="Foto profesional de Òscar Pla Martín" class="profile-image" />
       </div>
     </div>
