Update index foto2 jpg.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="hero-image">
         <img
-          src="/docs/joo.png"
+          src="/docs/joo.jpg"
           alt="Foto profesional de Òscar Pla Martín" class="profile-image" />
       </div>
     </div>
